some change(not use), not finish 20200324

--- a/PoseFlow/deepmatching/Makefile
+++ b/PoseFlow/deepmatching/Makefile
@@ -2,7 +2,7 @@ CC=g++
 
 OS_NAME=$(shell uname -s)
 ifeq ($(OS_NAME),Linux) 
-  LAPACKLDFLAGS=/usr/local/atlas/lib/libsatlas.so   # single-threaded blas
+  LAPACKLDFLAGS=/usr/lib/libsatlas.so   # single-threaded blas
   #LAPACKLDFLAGS=/usr/lib64/atlas/libtatlas.so  # multi-threaded blas
   #BLAS_THREADING=-D MULTITHREADED_BLAS # remove this if wrong
 endif
@@ -21,7 +21,7 @@ OBJ := $(SOURCES:%.cpp=%.o)
 HEADERS := $(shell find . -name '*.h')
 
 
-all: deepmatching 
+all: deepmatching-static 
 
 .cpp.o:  %.cpp %.h
 	$(CC) -o $@ $(CFLAGS) -c $+
